--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
-html {
-    background-image: url(bg.jpg);
+html { 
+    background: url(bg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-}
+  }
